--- a/calisma.html
+++ b/calisma.html
@@ -35,6 +35,7 @@
     <meta property="og:image" content="/assets/chpduslogo.webp" />
     <meta property="og:description " content="CHP Düsseldorf ve Çevresi Birliği Resmi Websitesi!" />
     <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://chpdusseldorfcevresi.de/" />
 
 
     <!------------------------HEADER & FOOTER LOAD--------------------------------------------------------------------------------------------->
