--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <meta property="og:title" content="CHP Düsseldorf ve Çevresi Birliği" />
     <meta property="og:image" content="/assets/chpduslogo.webp" />
     <meta property="og:description " content="CHP Düsseldorf ve Çevresi Birliği Resmi Websitesi!" />
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://chpdusseldorfcevresi.de/" />
 
 
     <!------------------------HEADER & FOOTER LOAD--------------------------------------------------------------------------------------------->
