--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta property="og:title" content="CHP Düsseldorf ve Çevresi Birliği" />
-    <meta property="og:image" content="https://chpdusseldorfcevresi.de/assets/chpduslogo.webp"/>
+    <meta property="og:image:secure_url" content="https://chpdusseldorfcevresi.de/assets/chpduslogo.webp"/>
     <meta property="og:description " content="CHP Düsseldorf ve Çevresi Birliği Resmi Websitesi!" />
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://chpdusseldorfcevresi.de/"/>
