--- a/calisma.html
+++ b/calisma.html
@@ -192,7 +192,7 @@ html, body {
             document.getElementsByTagName('head')[0].appendChild(metaTitle);
 
             var metaIMG = document.createElement('meta');
-            metaIMG.setAttribute('property', 'og:image');
+            metaIMG.setAttribute('property', 'og:image:secure_url');
             metaIMG.content = thumbnail;
             document.getElementsByTagName('head')[0].appendChild(metaIMG);
 
