--- a/index.html
+++ b/index.html
@@ -512,6 +512,10 @@ html, body {
         .canliFrame{
             width: 90%;
         }
+
+        .mainImgFrame{
+            margin-top: 0px;
+        }
     }
 
     @media screen and (max-width:1200px) {
