--- a/header.html
+++ b/header.html
@@ -181,15 +181,15 @@
   <div class="tpHeader">
     <div class="tpHeaderFrame">
         <p style="color: var(--beyaz);">"Frieden in der Heimat, Frieden auf der Welt"</p>
-        <img src="header-footer_Assets/header-banner-img-3.webp" style="height: 100%; display: relative;">
+        <img src="assets/header-banner-img-3.webp" style="height: 100%; display: relative;">
     </div>
 </div>
 
 <div class="mHeader">
     <div class="mHeaderFrame">
         <div class="mHeaderLogos">
-            <div class="chplogo" style="background-image: url(header-footer_Assets/CHP-Dikey-Logo.webp); min-width: 49%; min-height: 100%; background-size: contain; background-repeat: no-repeat;"></div>
-            <div class="duslogo" style="background-image: url(header-footer_Assets/chpduslogo.webp); min-width: 49%; min-height: 100%; background-size: contain; background-repeat: no-repeat;"></div>
+            <div class="chplogo" style="background-image: url(assets/CHP-Dikey-Logo.webp); min-width: 49%; min-height: 100%; background-size: contain; background-repeat: no-repeat;"></div>
+            <div class="duslogo" style="background-image: url(assets/chpduslogo.webp); min-width: 49%; min-height: 100%; background-size: contain; background-repeat: no-repeat;"></div>
         </div>
 
         <div class="mHeaderLinks">
