--- a/header.html
+++ b/header.html
@@ -240,8 +240,8 @@
     <div class="line2" style="margin-bottom: 20px;"></div>
 
     <div style="display: flex;">
-        <div style="background-image: url(header-footer_Assets/CHP-Dikey-Logo.webp); min-width: 100px; min-height: 100px; background-size: contain; background-repeat: no-repeat;"></div>
-        <div style="background-image: url(header-footer_Assets/chpduslogo.webp); min-width: 100px; min-height: 100px; background-size: contain; background-repeat: no-repeat;"></div>
+        <div style="background-image: url(assets/CHP-Dikey-Logo.webp); min-width: 100px; min-height: 100px; background-size: contain; background-repeat: no-repeat;"></div>
+        <div style="background-image: url(assets/chpduslogo.webp); min-width: 100px; min-height: 100px; background-size: contain; background-repeat: no-repeat;"></div>
     </div>
 </div>
 
