--- a/bizekatil.html
+++ b/bizekatil.html
@@ -174,11 +174,11 @@ html, body {
             <p style="margin-top: -10px;">Umut, Huzur ve Adalet Dolu Türkiye'yi Birlikte Getirelim!</p>
             <div class="line2"></div>
 
-            <form action="https://www.paypal.com/donate" method="post" target="_top" style="align-self: center; margin-top: 10px; margin-bottom: 10px;">
+            <!--<form action="https://www.paypal.com/donate" method="post" target="_top" style="align-self: center; margin-top: 10px; margin-bottom: 10px;">
                 <input type="hidden" name="hosted_button_id" value="5WECJY8AXQD2Y" />
                 <input type="image" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Spenden mit dem PayPal-Button" />
                 <img alt="" border="0" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1" height="1" />
-            </form>
+            </form>-->
                 
 
             <div class="mFrame2">
