--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ html, body {
 
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: 20vh 100vh 30vh 60vh auto 60vh 25vh 25vh 60vh 60vh 30vh 70vh 10vh;
+        grid-template-rows: 17vh 65vh 30vh 60vh auto 60vh 25vh 25vh 60vh 60vh 30vh 70vh 10vh;
         grid-template-areas: 
         "header"
         "video"
@@ -111,14 +111,51 @@ html, body {
 
     .videoFrame{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
-        justify-content: center;
+        justify-content: space-evenly;
 
         width: 100%;
         height: 100%;
-        
-        background-color: var(--kirmizi);
+    }
+
+    .katilButtnFrame{
+        height: 100%;
+        width: 20%;
+        background-color: rgb(255, 255, 255);
+
+        border: 1px solid rgba(0, 0, 0, 0.082);
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        gap: 10px;
+
+        -webkit-box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15); 
+box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
+    }
+
+    .mainKtlBttn{
+        color: white;
+        text-align: center;
+
+        width: 90%; height: 15%; background-color: #002B6B;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        font-size: 20px;
+
+        border-radius: 3px;
+
+        text-decoration: none;
+    }
+
+    .mainKtlBttn:hover{
+        opacity: .7;
+        cursor: pointer;
     }
 
     .VidBttn{
@@ -155,7 +192,7 @@ html, body {
     }
 
     .gndmImg{
-        height:80%;width: 80%;
+        height:80%; width:80%;
     }
 
     .gundemDetails{
@@ -174,7 +211,7 @@ html, body {
         align-items: center; 
         justify-content: center; 
         text-decoration: none; 
-        border-radius: 20px;
+        border-radius: 5px;
         font-family: GothamBold;
         margin-left: 10px;margin-top: 50px;
     }
@@ -609,6 +646,7 @@ html, body {
 
         background-repeat: no-repeat;
         background-position: center;
+        
     }
 
     @media screen and (max-width:1400px) {
@@ -671,9 +709,16 @@ html, body {
         <div class="headerFrame" style="z-index:100000"></div>
 
         <div class="videoFrame">
-            <video src="assets/sendebirtohumek.mp4" style="max-width: 100%; height: 100%; margin-top: -15px;" muted autoplay loop></video>
+         <video src="assets/sendebirtohumek.mp4" style="max-width: 100%; height: 100%; margin-top: -20px; border: 1px solid rgba(0, 0, 0, 0.082);-webkit-box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15); 
+         box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);" muted autoplay loop></video>
             <div class="katilButtnFrame">
-                <a href="https://www.chpdusseldorfcevresi.de/bizekatil" target="_blank" class="VidBttn" style="z-index: 2; margin-top: -50px;">BİZE KATIL!</a>
+                <!--<a href="https://www.chpdusseldorfcevresi.de/bizekatil" target="_blank" class="VidBttn" style="z-index: 2; margin-top: -50px;">BİZE KATIL!</a>-->
+                <h2 style=" margin-top: 25px; font-family: GothamBold; width: 100%;text-align: center;">#sendebirtohumek</h2>
+                <div class="mainKtlImg" style="width: 90%; height: 30%; background-image: url(assets/bizekatilimg2.jpeg);background-position: center; background-size: cover;margin-top: -20px;"></div>
+                <a class="mainKtlBttn" href="https://www.chpdusseldorfcevresi.de/bizekatil" style="height: 13%;" target="_blank">Gönüllü Ol</a>
+                <a class="mainKtlBttn" href="https://www.chpdusseldorfcevresi.de/bizekatil" target="_blank">Üye Ol</a>
+                <a class="mainKtlBttn" href="https://www.chpdusseldorfcevresi.de/bizekatil" style="height: 13%;" target="_blank">Haberdar Ol</a>
+                <a class="mainKtlBttn" style="height: 10%; margin-bottom: 10px; background-color: var(--kirmizi); border-radius: 10px;" target="_blank" href="https://www.chpdusseldorfcevresi.de/bizekatil">Bağış Yap</a>
             </div>
         </div>
 
