--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
                     <p style="margin-left: 10px; font-family: Gotham; text-shadow: rgb(255, 255, 255) 1px 0 10px;">--</p>
                     <span></span>
                     <a  style="color: black;text-decoration: none;margin-left: 10px; font-family: Gotham;font-weight: 500; text-shadow: rgb(255, 255, 255) 1px 0 10px;" href="tel:+49 1575 4274895">Tel.: +49 1575 4274895</a><p></p>
-                    <a  style="color: black;text-decoration: none;margin-left: 10px; font-family: Gotham; margin-bottom: -10px;font-weight: 500; text-shadow: rgb(255, 255, 255) 1px 0 10px;" href="mailto:info@chpdusseldorfcevresi.de">Email: info@chpdusseldorfcevresi.de</a>
+                    <a  style="color: black;text-decoration: none;margin-left: 10px; font-family: Gotham; margin-bottom: -10px;font-weight: 500; text-shadow: rgb(255, 255, 255) 1px 0 10px;" href="mailto:info@chpdusseldorfcevresi.de" target="_blank">Email: info@chpdusseldorfcevresi.de</a>
                 </div>
             </div>
 
