--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
             <div class="gundemDetails">
                 <p class="calismaDate" id="calismaDate" style="margin-left: 10px;margin-top: 30px;">02.04.2023</p>
                 <h2 class="calismaTitle" id="calismaTitle" style="font-family: GothamBold; text-transform: capitalize; margin-left: 10px;margin-top: -10px;">Hoş Geldin..!</h2>
-                <p class="calismaText" id="calismaText" style="font-family: Gotham; margin-top: -10px; color: rgb(59, 59, 59); margin-left: 10px;">Sen de bize katıl ve yeni yüzyılda Türkiye'yi birlikte inşaa edelim!</p>    
+                <p class="calismaText" id="calismaText" style="font-family: Gotham; margin-top: -10px; color: rgb(59, 59, 59); margin-left: 10px;"></p>    
                 <div class="gundemBtns">
                     <a href="https://www.chpdusseldorfcevresi.de/calismalar" target="_blank" class="readMoreBtn">Daha Fazla Oku</a>
                     <div class="gndmChangeBtnHolder">
