--- a/header.html
+++ b/header.html
@@ -73,6 +73,12 @@
       display: flex;
     }
 
+    @-moz-document url-prefix() {
+    .mHeaderBttmL {
+        margin-top: 0px;
+    }
+}
+
     .mHeaderLinks{
         width: inherit;
         height: 100%;
