--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
         width: 100%; height: 75%; background-color: var(--kirmizi); display: flex; align-items: center; justify-content:center;
     }
 
-    .bizeKatilIMG{width: 30%; height: 125%; background-image: url(assets/bizekatilimg.jpeg);background-position: center;}
+    .bizeKatilIMG{width: 30%; height: 125%; background-image: url(assets/bizekatilimg.webp);background-position: center;}
 
     .bizeKatilDetailsFrame{
         width: 45%; height: 100%; display: flex;align-items: center;flex-direction: column;justify-content: center; color: white;
@@ -719,7 +719,7 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
             <div class="katilButtnFrame">
                 <!--<a href="https://www.chpdusseldorfcevresi.de/bizekatil" target="_blank" class="VidBttn" style="z-index: 2; margin-top: -50px;">BİZE KATIL!</a>-->
                 <h2 style=" margin-top: 25px; font-family: GothamBold; width: 100%;text-align: center;">#sendebirtohumek</h2>
-                <div class="mainKtlImg" style="width: 90%; height: 30%; background-image: url(assets/bizekatilimg2.jpeg);background-position: center; background-size: cover;margin-top: -20px;"></div>
+                <div class="mainKtlImg" style="width: 90%; height: 30%; background-image: url(assets/bizekatilimg2.webp);background-position: center; background-size: cover;margin-top: -20px;"></div>
                 <a class="mainKtlBttn" href="https://www.chpdusseldorfcevresi.de/bizekatil" style="height: 13%;" target="_blank" aria-label="Birliğimize Gönüllü Ol">Gönüllü Ol</a>
                 <a class="mainKtlBttn" href="https://www.chpdusseldorfcevresi.de/bizekatil" target="_blank" aria-label="Birliğimize Üye Ol">Üye Ol</a>
                 <a class="mainKtlBttn" href="https://www.chpdusseldorfcevresi.de/bizekatil" style="height: 13%;" target="_blank" aria-label="Birliğimizden Haberdar Ol">Haberdar Ol</a>
@@ -859,7 +859,7 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
             </div>
         </div>
 
-        <a class="afis1" aria-label="Bize Katıl" href="https://www.chpdusseldorfcevresi.de/bizekatil" style="background-image: url(assets/test.png);background-size: cover; background-position: center;"></a>
+        <a class="afis1" aria-label="Bize Katıl" href="https://www.chpdusseldorfcevresi.de/bizekatil" style="background-image: url(assets/test.webp);background-size: cover; background-position: center;"></a>
 
         <!--<div class="projelerFrame">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/0ijGRc9EMsbCK7OLjK3xLP?utm_source=generator" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
