--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
 
         <div class="canliFrame">
             <h2 style="font-family: GothamBold; align-self: flex-start;">CHP DUS TV</h2>
-            <iframe loading="lazy" width="100%" height="90%" src="https://www.youtube.com/embed/HaHZ0nAjy-A?si=7e4ckTVzKi8x7MAV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
+            <iframe title="CHP Dus TV" loading="lazy" width="100%" height="90%" src="https://www.youtube.com/embed/HaHZ0nAjy-A?si=7e4ckTVzKi8x7MAV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
             <div class="line2" style="margin-top: 30px;"></div>
         </div>
 
@@ -952,7 +952,7 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
 
             <div class="iletisim2" style="width: 50%; height: 50%;">
                 <div class="iletisimMap" style="width: 30%; height: 70%; margin-left: 10px;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.2951244415067!2d6.773477699999999!3d51.489451499999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8957d4760fbc7%3A0x613e2d343144a864!2sEmscherstra%C3%9Fe%20215%2C%2047166%20Duisburg!5e0!3m2!1sen!2sde!4v1703519238682!5m2!1sen!2sde" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe title="Buro Adres" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.2951244415067!2d6.773477699999999!3d51.489451499999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8957d4760fbc7%3A0x613e2d343144a864!2sEmscherstra%C3%9Fe%20215%2C%2047166%20Duisburg!5e0!3m2!1sen!2sde!4v1703519238682!5m2!1sen!2sde" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
     
                 <div class="iletismDetails" style="margin-left: 25px; width: 60%; height: 70%;">
