--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <!--<link rel="stylesheet" type="text/css" href="files/style.css" media=”screen” />-->
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 
     <meta property="og:title" content="CHP Düsseldorf ve Çevresi Birliği" />
     <meta property="og:image:secure_url" content="https://chpdusseldorfcevresi.de/assets/chpduslogo.webp"/>
@@ -841,19 +841,19 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
 
             <div class="hesapFrame" style="display: flex; flex-direction: row; gap:10px; justify-content: space-evenly; width: 100%;">
                 <div class="Facebook" style="display: flex;flex-direction: column;justify-content: center; align-items: center;">
-                    <a aria-label="Facebook Hesabımız" href="https://www.facebook.com/chpbirligi?ref=embed_page" target="_blank" class="fa fa-facebook" style="display:flex;color:white;background-color:#3B5998; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px;"></a>
+                    <a aria-label="Facebook Hesabımız" href="https://www.facebook.com/chpbirligi?ref=embed_page" target="_blank" style="display:flex;color:white;background-color:#3B5998; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px; background-image: url(assets/facebook-f.svg); background-position: center; background-repeat: no-repeat; background-size:20px;"></a>
                 </div>
 
                 <div class="Instagram" style="display: flex;flex-direction: column;justify-content: center; align-items: center;">
-                    <a aria-label="Instagram Hesabımız" href="https://www.instagram.com/chpdusseldorfcevresibirligi/" target="_blank" class="fa fa-instagram" style="display:flex;color:white;background-color:#dd4b39; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px;"></a>
+                    <a aria-label="Instagram Hesabımız" href="https://www.instagram.com/chpdusseldorfcevresibirligi/" target="_blank" style="display:flex;color:white;background-color:#dd4b39; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px; background-image: url(assets/instagram.svg); background-position: center; background-repeat: no-repeat; background-size:25px;"></a>
                 </div>
 
                 <div class="Twitter" style="display: flex;flex-direction: column;justify-content: center; align-items: center;">
-                    <a aria-label="Twitter Hesabımız" href="https://twitter.com/chpdusseldorf" target="_blank" class="fa fa-twitter" style="display:flex;color:white;background-color:#55ACEE; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px;"></a>
+                    <a aria-label="Twitter Hesabımız" href="https://twitter.com/chpdusseldorf" target="_blank" style="display:flex;color:white;background-color:#55ACEE; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px; background-image: url(assets/x-twitter.svg); background-position: center; background-repeat: no-repeat; background-size:25px;"></a>
                 </div>
 
                 <div class="whatsapp" style="display: flex;flex-direction: column;justify-content: center; align-items: center;">
-                    <a aria-label="Whatsapp Grubumuz" href="https://whatsapp.com/channel/0029VaMUxTU5a249Rb4U6G36" target="_blank" class="fa fa-whatsapp" style="display:flex;color:white;background-color:#00a300; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px;"></a>
+                    <a aria-label="Whatsapp Grubumuz" href="https://whatsapp.com/channel/0029VaMUxTU5a249Rb4U6G36" target="_blank" style="display:flex;color:white;background-color:#00a300; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px; background-image: url(assets/whatsapp.svg); background-position: center; background-repeat: no-repeat; background-size:25px;"></a>
                 </div>
 
             </div>
