--- a/index.html
+++ b/index.html
@@ -832,7 +832,10 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
 
         <div class="canliFrame">
             <h2 style="font-family: GothamBold; align-self: flex-start;">CHP DUS TV</h2>
-            <iframe title="CHP Dus TV" loading="lazy" width="100%" height="90%" src="https://www.youtube.com/embed/HaHZ0nAjy-A?si=7e4ckTVzKi8x7MAV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
+
+            <video src="assets/sendebirtohumek.mp4" style="max-width: 100%; height: 100%; border: 1px solid rgba(0, 0, 0, 0.082);" controls></video>
+
+            <!--<iframe title="CHP Dus TV" loading="lazy" width="100%" height="90%" src="https://www.youtube.com/embed/HaHZ0nAjy-A?si=7e4ckTVzKi8x7MAV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->            
             <div class="line2" style="margin-top: 30px;"></div>
         </div>
 
