--- a/header.html
+++ b/header.html
@@ -202,7 +202,7 @@
   <div class="tpHeader">
     <div class="tpHeaderFrame">
         <p style="color: var(--beyaz);">"Frieden in der Heimat, Frieden auf der Welt"</p>
-        <img src="assets/header-banner-img-3.webp" style="height: 100%; display: relative;">
+        <img src="assets/header-banner-img-3.webp" style="height: 100%; display: relative;" alt="ataturk-img">
     </div>
 </div>
 
