--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
 
     .proje a:hover{opacity: .5;}
 
-    @media screen and (max-width:1000px) {
+    @media screen and (max-width:1200px) {
         .projelerFrame{
-            width: 100%;
+            width: 90%;
             min-height: 100vh;
             height: fit-content;
             margin-top: 0px;
@@ -538,13 +538,17 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
         opacity: .5;
     }
 
-    @media screen and (max-width:800px) {
-        .iletisimMap{
-            display: none;
-        }
+    .iletisimMap{
+        width: 30%; height: 70%; margin-left: 10px;
+    }
+
+    @media screen and (max-width:1200px) {
+
+        .iletisimMap{display: none;}
 
         .projelerFrame{
             width: 90%;
+            height: 100%;
         }
 
         .canliFrame{
@@ -568,7 +572,7 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
         }
     }
 
-    @media screen and (max-width:1000px) {
+    @media screen and (max-width:1200px) {
         .bizeKtlBttn{
             min-height: 75px;
         }
@@ -966,7 +970,7 @@ box-shadow: 0px 5px 19px -8px rgba(0,0,0,0.15);
 
 
             <div class="iletisim2" style="width: 50%; height: 50%;">
-                <div class="iletisimMap" style="width: 30%; height: 70%; margin-left: 10px;">
+                <div class="iletisimMap">
                     <iframe title="Buro Adres" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.2951244415067!2d6.773477699999999!3d51.489451499999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8957d4760fbc7%3A0x613e2d343144a864!2sEmscherstra%C3%9Fe%20215%2C%2047166%20Duisburg!5e0!3m2!1sen!2sde!4v1703519238682!5m2!1sen!2sde" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
     
